--- a/package.json
+++ b/package.json
@@ -43,12 +43,13 @@
 		"vitest-browser-svelte": "^1.1.0"
 	},
 	"dependencies": {
-		"luxon": "^3.7.2",
 		"@capacitor/android": "^7.4.3",
 		"@capacitor/camera": "^7.0.2",
 		"@capacitor/cli": "^7.4.3",
 		"@capacitor/core": "^7.4.3",
 		"@capacitor/local-notifications": "^7.0.3",
+		"luxon": "^3.7.2",
+		"marked": "^17.0.1",
 		"uuid": "^13.0.0"
 	}
 }
